fix(web): fix layout issues with all cases table at small screen sizes

--- a/appeals/web/src/styles/5-elements/_elements.page.scss
+++ b/appeals/web/src/styles/5-elements/_elements.page.scss
@@ -16,6 +16,8 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
+	// avoid horizontal scrolling
+	overflow-x: hidden;
 }
 
 // Smooth scrolling IF user doesn't have a preference due to motion sensitivities
